--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,23 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery-photo{
+  width: 360px;
+  height: 200px;
+}
+
+.gallery{
+  display: flex;
+  list-style: none;
+  margin: 0px;
+}
+
+.gallery-item{
+  justify-content: center;
+  line-height: 0px;
+}
+
+.gallery-item:not(:last-child){
+  margin-right: 20px;
+}
